<resources>
    <string name="app_name">疯火接单</string>
    <string name="crazy_fire_grab_order">疯火抢单</string>
    <string name="mine">我</string>
    <string name="grabOrder">抢单</string>
    <string name="orders">订单</string>
    <string name="crazy_fire_orders">疯火订单</string>
    <string name="merge_order">并单</string>
    <string name="other">其他</string>
    <string name="no_grab_orders_tips">暂时没有可抢的订单哦！</string>
    <string name="no_map_record">您还未下载离线地图哦</string>
    <string name="other_content">其他内容</string>
    <string name="clock_in">上班打卡</string>
    <string name="check_schedule">查看排班</string>
    <string name="trouble_report">故障上报</string>
    <string name="send_record">配送记录</string>
    <string name="send_data">配送数据（收入）</string>
    <string name="bluetooth">蓝牙耳机手环</string>
    <string name="contact_service">联系客服</string>
    <string name="send_settings">应用设置</string>
    <string name="schedule">排班</string>
    <string name="call_content">客服电话：023 – 67750215</string>
    <string name="merge_order_tips">确定要执行并单操作吗？</string>

    <!--版本-->
    <string name="version">版本</string>
    <string name="notice">通知</string>
    <string name="update">更新</string>
    <string name="check_new_version">检查更新</string>
    <string name="new_version_title">发现新版本</string>
    <string name="new_version_available">有新版本可以使用，赶紧更新吧</string>
    <string name="no_new_version">暂时没有发现新版本</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="suggestion">意见建议</string>
    <string name="offline_map">离线地图</string>
    <string name="warm_tips">温馨提示</string>
    <string name="call">拨打</string>
    <string name="grab_orders">抢单</string>

    <!-- 扫码 -->
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="button_ok">OK</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <string name="no_send_record">暂无配送记录</string>
    <string name="succeed_order">成功单</string>
    <string name="unusual_order">异常单</string>
    <string name="home_page_menu">主页菜单</string>
    <string name="map_nav">地图导航</string>
    <string name="scan_code_order">扫码取餐</string>
    <string name="today_miles_orders_title">今日里程订单数</string>
    <string name="default_data_0">0</string>
    <string name="mile_0_3">0-3公里</string>
    <string name="mile_3_5">3-5公里</string>
    <string name="mile_5_10">5-10公里</string>
    <string name="mile_10_15">10-15公里</string>
    <string name="mile_15_20">15-20公里</string>
    <string name="mile_20_25">20-25公里</string>
    <string name="month_send_data">月数据</string>
    <string name="send_order_data">送单</string>
    <string name="month_send_order_num">月送单</string>
    <string name="average_day_send_order_num">平均每日送单</string>
    <string name="comment">评价</string>
    <string name="comments_num">获评次数</string>
    <string name="five_star_good_comment">5星好评</string>
    <string name="average_comment_grade">平均评分</string>
    <string name="mile">里程</string>
    <string name="average_mile">平均里程</string>
    <string name="total_mile">累计里程</string>
    <string name="bluetooth_tips">请保持本机蓝牙为开启状态，建议搭配蓝牙设备，以方便获取接派单信息。</string>
    <string name="bluetooth_headset">蓝牙耳机</string>
    <string name="equipment">设备</string>
    <string name="wristband">手环</string>
    <string name="navigation">导航</string>
    <string name="confirm_send">送达确认</string>
    <string name="customer">客户</string>
    <string name="business">商家</string>
    <string name="wait_gettting_order">待取餐</string>
    <string name="send_address">送餐地址：</string>
    <string name="send_address_title">送餐地址</string>
    <string name="order_time">下单时间：</string>
    <string name="get_order_time">取餐时间：</string>
    <string name="finish_send_time">送达时间</string>
    <string name="grab_order_succeed">抢单成功！可到订单列表查看哦</string>
    <string name="order_detail">订单详情</string>
    <string name="customer_info">顾客信息</string>
    <string name="customer_name">姓名：</string>
    <string name="customer_phone">电话号码：</string>
    <string name="total_price">总计</string>
    <string name="contact_business">联系商家</string>
    <string name="get_order_check">取餐验证</string>
    <string name="get_order_check_hint">在此输入取餐验证码</string>
    <string name="back">返回</string>
    <string name="sender_login_check">配送员验证</string>
    <string name="phone_number">手机号码</string>
    <string name="edit_phone_num_hint">请输入手机号</string>
    <string name="edit_pw_hint">请输入密码</string>
    <string name="account_pw">账号密码</string>
    <string name="login">登录</string>
    <string name="_023_67750215">023-67750215</string>
    <string name="commit">提交</string>
    <string name="all_cities">所有城市</string>
    <string name="download">下载</string>
    <string name="download_manage">下载管理</string>
    <string name="suggestion_hint">感谢您的反馈意见</string>
    <string name="report">上报</string>
    <string name="upload_picture_hint">上传照片，仅一张，不超过5M</string>
    <string name="trouble_picture">故障照片</string>
    <string name="traffic_accident">发生交通事故</string>
    <string name="vehicle_break_down">车辆发生故障</string>
    <string name="meal_goods_break_down">餐件损坏</string>
    <string name="stop_by_law_enforcement">被执法人员拦下</string>
    <string name="body_discomfort">身体突发不适</string>
    <string name="take_photo">拍摄</string>
    <string name="choose_from_album">从手机相册选择</string>
</resources>
