<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@mipmap/login_bg">
        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/marginRight_15dp"
                    android:padding="@dimen/padding_15dp"
                    android:src="@mipmap/logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/sender_login_check" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:orientation="horizontal"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number" />

                    <EditText
                        android:id="@+id/phone_num_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="phone"
                        android:hint="@string/edit_phone_num_hint"
                        android:padding="@dimen/padding_10dp"
                        android:textSize="@dimen/crazy_fire_textSize_14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:orientation="horizontal"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account_pw" />

                    <EditText
                        android:id="@+id/pw_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/edit_pw_hint"
                        android:padding="@dimen/padding_10dp"
                        android:textSize="@dimen/crazy_fire_textSize_14sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/colorAccent"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="@dimen/margin_10dp"/>

            </LinearLayout>
        </ScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_023_67750215"
            android:gravity="center"
            android:drawableLeft="@drawable/ic_call_24dp"
            android:drawableStart="@drawable/ic_call_24dp"
            android:drawablePadding="@dimen/padding_5dp"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="@dimen/margin_10dp"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>