<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/normal_layout_radius_shape"
        android:orientation="vertical">

        <TextView
            android:id="@+id/traffic_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/normal_layout_gray_bg_selector"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/traffic_accident"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/lgray" />

        <TextView
            android:id="@+id/vehicle_break_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/normal_layout_gray_bg_selector"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/vehicle_break_down"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/lgray" />

        <TextView
            android:id="@+id/meal_break_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/normal_layout_gray_bg_selector"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/meal_goods_break_down"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/ltgray" />

        <TextView
            android:id="@+id/law_enforcement_stop_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/normal_layout_gray_bg_selector"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/stop_by_law_enforcement"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/lgray" />

        <TextView
            android:id="@+id/body_discomfort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/normal_layout_gray_bg_selector"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/body_discomfort"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
