<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/gray_blue_thin">

        <include
            layout="@layout/normal_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10dp"
            android:text="@string/bluetooth_tips"
            android:background="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_blue_thin"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/drawable_padding_5dp">

            <View
                android:layout_width="1dp"
                android:layout_height="@dimen/padding_10dp"
                android:layout_marginLeft="@dimen/padding_10dp"
                android:layout_marginRight="@dimen/padding_10dp"
                android:background="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bluetooth_headset"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10dp"
            android:text="@string/equipment"
            android:background="@android:color/white"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_line_width_0.5dp"
            android:background="@color/gray_blue_thin" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/drawable_padding_5dp"
            android:background="@color/gray_blue_thin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10dp"
            android:text="@string/wristband"
            android:background="@android:color/white"/>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
