<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white_transparent">

    <TextView
        android:id="@+id/take_photo_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_photo"
        android:gravity="center"
        android:textSize="@dimen/crazy_fire_textSize_14sp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/black"
        android:background="@drawable/normal_layout_gray_bg_selector"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/lgray" />

    <TextView
        android:id="@+id/album_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:gravity="center"
        android:text="@string/choose_from_album"
        android:textColor="@color/black"
        android:textSize="@dimen/crazy_fire_textSize_14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@color/gray_blue_thin" />


    <android.support.v7.widget.CardView
        android:id="@+id/cancle_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:contentPaddingTop="12dp"
        app:contentPaddingBottom="12dp"
        tools:targetApi="lollipop">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cancel"
            android:textSize="@dimen/crazy_fire_textSize_14sp"
            android:textColor="@color/black"/>
    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/lgray" />
</LinearLayout>
