<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp">
        <!--android:layout_height="?android:attr/actionBarSize"-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10dp"
                android:src="@drawable/back_selector" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/tool_bar"
                android:layout_width="wrap_content"
                android:layout_height="?android:attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll"
                app:title="@string/confirm_send"
                app:titleTextColor="@color/colorAccent" />

        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/padding_5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_address"
                    android:textColor="@color/text_gray" />

                <TextView
                    android:id="@+id/send_address_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="五里店欧亚达家居"
                    android:textColor="@color/text_gray" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/normal_line_high_0.5dp"
                android:background="@color/gray_blue_thin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/padding_5dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_name"
                        android:textColor="@color/text_gray" />

                    <TextView
                        android:id="@+id/user_name_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="黄"
                        android:textColor="@color/text_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_phone"
                        android:textColor="@color/text_gray" />

                    <TextView
                        android:id="@+id/customer_phone_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="18323407446"
                        android:textColor="@color/text_gray" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/normal_line_high_0.5dp"
                android:background="@color/gray_blue_thin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <EditText
                android:id="@+id/check_code_edit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/gray_blue_thin"
                android:gravity="center"
                android:hint="@string/get_order_check_hint"
                android:textSize="@dimen/crazy_fire_textSize_14sp" />

            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>